// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkBreadcrumbItem should render correctly 1`] = `
<DocumentFragment>
  <li
    class="bpk-breadcrumb-item"
  >
    <div
      class="bpk-breadcrumb-item__link"
    >
      <a
        class="bpk-link"
        href="https://skyscanner.design/"
      >
        Backpack
      </a>
    </div>
    <div
      class="bpk-breadcrumb-item__arrow"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.25 7.463v9.074a1.358 1.358 0 002.251 1.11l4.77-4.354a1.53 1.53 0 00.04-2.184l-4.77-4.718A1.357 1.357 0 008.25 7.463z"
        />
      </svg>
    </div>
  </li>
</DocumentFragment>
`;

exports[`BpkBreadcrumbItem should render correctly with a "active" prop 1`] = `
<DocumentFragment>
  <li
    class="bpk-breadcrumb-item"
  >
    <div
      class="bpk-breadcrumb-item__active-item"
    >
      Backpack
    </div>
    <div
      class="bpk-breadcrumb-item__arrow"
    />
  </li>
</DocumentFragment>
`;

exports[`BpkBreadcrumbItem should render correctly with a custom class name 1`] = `
<DocumentFragment>
  <li
    class="bpk-breadcrumb-item my-custom-class"
  >
    <div
      class="bpk-breadcrumb-item__link"
    >
      <a
        class="bpk-link"
        href="https://skyscanner.design/"
      >
        Backpack
      </a>
    </div>
    <div
      class="bpk-breadcrumb-item__arrow"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.25 7.463v9.074a1.358 1.358 0 002.251 1.11l4.77-4.354a1.53 1.53 0 00.04-2.184l-4.77-4.718A1.357 1.357 0 008.25 7.463z"
        />
      </svg>
    </div>
  </li>
</DocumentFragment>
`;

exports[`BpkBreadcrumbItem should render correctly with arbitrary props 1`] = `
<DocumentFragment>
  <li
    class="bpk-breadcrumb-item"
    testid="arbitrary value"
  >
    <div
      class="bpk-breadcrumb-item__link"
    >
      <a
        class="bpk-link"
        href="https://skyscanner.design/"
      >
        Backpack
      </a>
    </div>
    <div
      class="bpk-breadcrumb-item__arrow"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.25 7.463v9.074a1.358 1.358 0 002.251 1.11l4.77-4.354a1.53 1.53 0 00.04-2.184l-4.77-4.718A1.357 1.357 0 008.25 7.463z"
        />
      </svg>
    </div>
  </li>
</DocumentFragment>
`;

exports[`BpkBreadcrumbItem should render correctly with with "linkProps" attribute 1`] = `
<DocumentFragment>
  <li
    class="bpk-breadcrumb-item"
  >
    <div
      class="bpk-breadcrumb-item__link"
    >
      <a
        class="bpk-link"
        href="https://skyscanner.design/"
        testid="arbitrary value"
      >
        Backpack
      </a>
    </div>
    <div
      class="bpk-breadcrumb-item__arrow"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.25 7.463v9.074a1.358 1.358 0 002.251 1.11l4.77-4.354a1.53 1.53 0 00.04-2.184l-4.77-4.718A1.357 1.357 0 008.25 7.463z"
        />
      </svg>
    </div>
  </li>
</DocumentFragment>
`;
